tests/baselines/reference/captureSuperPropertyAccessInSuperCall01.errors.txt
tests/cases/compiler/captureSuperPropertyAccessInSuperCall01.ts(9,24): error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.


==== tests/cases/compiler/captureSuperPropertyAccessInSuperCall01.ts (1 errors) ====
    class A {
    	constructor(f: () => string) {
    	}
    	public blah(): string { return ""; }
    }
    
    class B extends A {
    	constructor() {
    		super(() => { return super.blah(); })
    		                     ~~~~~
!!! error TS17011: 'super' must be called before accessing a property of 'super' in the constructor of a derived class.
    	}
    }